--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <section class="section">
+      <div class="container" id="root">
+      </div>
+    </section>
   </body>
 </html>
